Convert movielist servlet to Mongo